# OOP_Lab_2

./: .gitignor  CMakeLists.txt  README.md
include/: array.hpp  binary.hpp
src/: array.cpp  binary.cpp  main.cpp
tests/: main.cpp
